# LugISAMI

./: .gitignore  Hola.py  README.md  readme.md  requirements.txt  setup.cfg
lugISAMI/: Ejemplo.py  Hola.py  Lug.py  Lug_ISAMI_Template.xlsm  Lug_template.xlsm  Test.py  TestAnalysis.py  TestMaterials.py  Test_Compare_output.py  Test_class.py  Test_exe.py  Txt.py  borrar.py  lugGUI.py  lugReader.py  lugWriter.py  prueba.py  wrappers.py
lugISAMI/H/: Txt.py
lugISAMI/test/: Test_class.py  Test_compare_output.py  Test_html.py  Test_read_html.py  Test_unzip.py
lugISAMI/test/testcases/: LUG.czm  LUG_3.czm
lugISAMI/test/testcases/backup/: Test_exe.py  create_exe.py
lugISAMI/test/testcases/comparison/1/: Lug_comparison_1_macro.xlsm  Test_1.py  Test_2.py
lugISAMI/test/testcases/comparison/3/: Lug_comparison_3_macro.py  Lug_comparison_3_macro.xlsm  Lug_comparison_3_python.py  Lug_comparison_3_template.xlsm
lugISAMI/testcases/: Lug_B3.py  Lug_B3_2.py  Lug_manual.xlsm  Txt.py  excel_template.xlsx
lugISAMI/testcases/backup/: TestAnalysis.py
lugISAMI/testcases/comparison/1/: Lug_comparison_1_macro.py  Lug_comparison_1_template.xlsm
lugISAMI/testcases/comparison/2/: Lug_comparison_2_macro.py  Lug_comparison_2_macro.xlsm  Lug_comparison_2_python.py  Lug_comparison_2_template.xlsm
