[metadata]
name = lugISAMI
description = Handling of lug analysis for ISAMI platform
url =
license = Apache Software License
author = Altran
author_email =
long_description = file: readme.md
platforms = any

[options]
python_requires = >=2.7, <= 3.9
packages = find:
include_package_data = True
install_requires =
    numpy
    openpyxl
    datetime
    bs4
setup_requires =
    pytest_runner
    numpydoc
    setuptools_scm
tests_require =
    pytest
    pytest-cov
    pytest-flake8
    pytest-html
    pytest-xdist
    path.py

[aliases]
test = pytest

[tool:pytest]
addopts =
    --flake8
    --junitxml=results.xml
    --cov-report=html
    --cov-report=term
    --cov=noi
    --html=test_report.html
flake8-max-line-length = 119
flake8-ignore =
    E121
    E123
    E126
    E133
    E226
    E241
    E242
    E262
    E265
    E704
    W504
    F401
    F403
    F405
    F841

[coverage:run]
omit =
    */test/*
